package expression.tokenextractor.operator;

import expression.tokenextractor.AbstractFixedValueTokenExtractor;

public abstract class AbstractOperatorExtractor extends AbstractFixedValueTokenExtractor {

}
