package expression.tokenextractor.parenthesis;

import expression.tokenextractor.AbstractFixedValueTokenExtractor;

public abstract class AbstractParenthesisExtractor extends AbstractFixedValueTokenExtractor {

}
